<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/previous_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="@drawable/border"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/previous_transaction"
        android:visibility="visible"/>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_above="@id/previous_transaction"
        android:layout_height="match_parent" >
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical"
                      android:padding="16dp">
            <RelativeLayout android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#ef9a9a"
                            android:orientation="horizontal"
                            android:padding="16dp">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/operator"/>

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/operator_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@null"
                    android:gravity="center"
                    android:text="" android:textColor="@color/colorPrimaryDark"/>

            </RelativeLayout>

            <RelativeLayout android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="16dp">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/mobile_number"/>
                <FrameLayout android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentEnd="true"
                             android:layout_alignParentRight="true">
                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="7829020660"
                        android:textSize="20sp"
                        android:visibility="invisible"/>

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/mobile_number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="right"
                        android:inputType="number"
                        android:maxLength="10"
                        android:text="" android:textColor="@color/colorPrimaryDark"/>
                </FrameLayout>

            </RelativeLayout>

            <RelativeLayout android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#ef9a9a"
                            android:orientation="horizontal"
                            android:padding="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount"/>

                <FrameLayout android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentEnd="true"
                             android:layout_alignParentRight="true">
                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="00000"
                        android:textSize="20sp"
                        android:visibility="invisible"/>

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/amount"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="right"
                        android:inputType="number"
                        android:maxLength="4"
                        android:text="" android:textColor="@color/colorPrimaryDark"/>
                </FrameLayout>

            </RelativeLayout>


        </LinearLayout>

        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:padding="16dp">
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/cancel_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:text="@string/cancel"/>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/border"
                android:text="@string/pay"/>

        </RelativeLayout>


    </android.support.v7.widget.CardView>


</RelativeLayout>